--- a/Module3_Solution/index.html
+++ b/Module3_Solution/index.html
@@ -19,7 +19,7 @@
     </div>
     <div>
 
-        <button type="button" class="navbar-toggle collapsed"  data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false"  >
+        <button type="button" class="navbar-toggle collapsed visible-xs"  data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false"  >
 
         <span class="sr-only"></span>
           
@@ -33,21 +33,22 @@
           
     </div>
 <div id="collapsable-nav" class="collapse navbar-collapse">
-  <ul id-"nav-list" class="nav navbar-nav navbar-right visible-xs">
+  <ul id-"nav-list" class="nav navbar-nav navbar-right visible-xs text-center">
    <li class="visible-xs active">
     <a href="#chicken">
+      <br class="visible-xs">
     <span class="glyphicon glyphicon-cutlery">chicken</span><br class="hidden-xs">
     </a>
    </li>
    <li class="visible-xs active">
     <a href="#sushi">
-      <hr class="visible-xs">
+      <br class="visible-xs">
        <span class="glyphicon glyphicon-info-sign" >sushi</span><br class="hidden-xs">
          </a>
           </li>
     <li class="visible-xs active">
     <a href="#beef">
-    <hr class="visible-xs">
+    <br class="visible-xs">
     <span class="glyphicon glyphicon-cutlery">beef</span><br class="hidden-xs">
     </a>
    </li>
